chore(back): add swagger doc on auth controller
