# back/docs/swagger.json
@@ -7,33 +7,36 @@
         "version": "1.0"
     },
     "host": "localhost:3000",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
-        "/api/v1/pets/{id}": {
-            "get": {
-                "description": "Gets a pet using the pet ID",
+        "/user/authentication": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Pets"
+                    "users"
                 ],
-                "summary": "Get pet by ID",
-                "operationId": "get-pet-by-id",
+                "summary": "Authenticate a user",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Pet ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "User credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Credentials"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.AuthSuccessResponse"
                         }
                     },
                     "400": {
@@ -44,10 +47,31 @@
                         "description": "Not Found",
                         "schema": {}
                     },
-                    "405": {
-                        "description": "Method Not Allowed",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {}
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "controllers.AuthSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.Credentials": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
